[package]
name = "dialoguer_trait"
version = "0.1.2"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
description = "Trait helper (and derive macro) for constructing interactive message prompts using `dialoguer`"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/luke-biel/dialoguer_macro"
categories = ["command-line-interface", "config"]

[workspace]
members = ["dialoguer_macro"]

[lib]
name = "dialoguer_trait"

[dependencies]
dialoguer = "0.8.0"
dialoguer_macro = { path = "dialoguer_macro", version = "0.1.2" }

[dev-dependencies]
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
