[package]
name = "dialoguer_macro"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
description = "Derive macro based on Dialoguer crate. To use only with 'dialoguer_trait'"
repository = "https://github.com/luke-biel/dialoguer_macro"
categories = ["command-line-interface", "config"]
keywords = ["procmacro", "proc_macro", "derive"]

[lib]
name = "dialoguer_macro"
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.27"
proc-macro-error = "1.0.4"
syn = { version = "1.0.73", features = ["full", "derive", "extra-traits"] }
